# spirea

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: publish.yaml  test.yaml
examples/samek/: __main__.py  events.py  hsm.py  s0.py  s1.py  s11.py  s2.py  s21.py  s211.py  state.py
src/hsm/: __init__.py  _common.py  a.py  asyncio.py  sync.py
src/spirea/: _common.py  asyncio.py  sync.py
tests/: _test_flat.py  _test_tests.py  test_flat.py  test_samek.py  test_samek_async.py  test_scoped_context.py  test_tests.py
