[project]
name = "hsm"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "J.P. Hutchins", email = "jphutchins@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
universal = true
managed = true
dev-dependencies = ["pytest>=8.3.3", "mypy>=1.11.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hsm"]
