[project]
name = "hsm"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "J.P. Hutchins", email = "jphutchins@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
examples = ["readchar>=4.2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
universal = true
managed = true
dev-dependencies = ["pytest>=8.3.3", "mypy>=1.11.2", "pytest-asyncio>=0.24.0"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
mypy_path = "src"

[tool.ruff]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hsm"]
