# Copyright (c) 2025 JP Hutchins
# SPDX-License-Identifier: MIT

[project]
name = "spirea"
description = "Add your description here"
authors = [{ name = "J.P. Hutchins", email = "jphutchins@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ["version"]
dependencies = ["typing-extensions>=4.14.1"]

[dependency-groups]
examples = ["readchar>=4.2.1"]
dev = [
"pytest>=8.3.3",
"pytest-asyncio>=0.24.0",
"hatch>=1.14.1",
"mypy>=1.16.1",
"pytest>=8.4.0",
"pytest-mypy-testing>=0.1.3",
"ruff>=0.12.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
mypy_path = "src"

[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = ["ruff check .", "mypy ."]
test = "pytest --doctest-modules"
all = ["format", "lint", "test"]

[tool.hatch.version]
source = "vcs"
